--- a/src/assets/style/style.css
+++ b/src/assets/style/style.css
@@ -17,13 +17,16 @@
 
 
 
+.main_layout::-webkit-scrollbar {
+    display: none;
+ }
 
-::-webkit-scrollbar-thumb:vertical {
+.main_layout::-webkit-scrollbar-thumb:vertical {
 display: none;
     
 }
 
-::-webkit-scrollbar-thumb:horizontal{
+.main_layout::-webkit-scrollbar-thumb:horizontal{
 display: none;
 }
 
